module , content:angular

--- a/guitar/i.html
+++ b/guitar/i.html
@@ -12,7 +12,8 @@
 </div>
 
 <div>
-<a href=../guitar/Death_Voice_of_the_souls.txt target="_blank">Death - Voice of the souls (табулатура) </a>
+<a href=../guitar/Death_Voice_of_the_souls.txt target="_blank">Death - Voice of the souls (табулатура) </a><br>
+<a href="https://youtu.be/qa7guKV7IZs">Kirk Fletcher: Blues Masterclass</a><br>
 </div>
 
 <div>
@@ -60,6 +61,12 @@
   <h2>Tokai LP (1978)</h2>
   <img src="../guitar/als48-vf.png" alt="Tokai ALS48F-VF" style="float: left">
   <a href="http://www.codamusic.ru/model.aspx?model=ALS48F-SR">Tokai ALS48F</a>
+</div>
+
+<div>
+  <h2>PRS</h2>
+  <img src="../guitar/mccarty_singlecut_594_500.png" alt="McCarty Singlecut 594" style="float: left">
+  <a href="https://www.prsguitars.com/index.php/electrics/model/mccarty_singlecut_594_2020">McCarty Singlecut 594</a>
 </div>
 
 </div>
