--- a/programming/css.html
+++ b/programming/css.html
@@ -13,6 +13,7 @@
     <a href="http://tools.w3clubs.com/cssmin/">tools.w3clubs.com/cssmin</a><br>
     <a href="https://github.com/mrclay/minify">minify</a><br>
     <a href="http://uroki-css.ru">uroki-css</a><br>
+    <a href="http://flexboxfroggy.com/">flexboxfroggy</a><br>
   </div>
   <div>
     <li><a href="https://whitepaper.tools"><img src="http://whitepaper.tools/favicon.ico" alt="whitepaper tools"> whitepaper.tools</a></li>
@@ -24,6 +25,7 @@
     <li><a href="http://htmlbook.ru/samcss/napisanie-effektivnogo-koda"><img src="http://htmlbook.ru/favicon.ico" alt="htmlbook"> Написание эффективного кода</a></li>
     <li><a href="http://htmlbook.ru/samcss/kaskadirovanie">Cascading</a></li>
     <li>шлюзы</li>
+    <a href="https://www.youtube.com/channel/UCbq5voeHkiCc5YducCiuUWA/">MinskCSS</a>
   </div>
 
 <div><pre><code>
