--- a/programming/html.html
+++ b/programming/html.html
@@ -41,13 +41,15 @@ novalidate -отменяет проверку заполнености и соо
 < input type="search" > <input type="search"> <br>
 < input type="submit" > <input type="submit"> <br>
 < input type="submit" value="отправить" > <input type="submit" value="submit"> <br>
+< button>button< /button> <button>button</button><br>
+< button disabled="disabled">button< /button> <button disabled="disabled">button</button><br>
 < input type="tel" pattern="\d{3}-\d{3}-\d{4}" placeholder="xxx-xxx-xxxx" > <input type="tel" pattern="\d{3}-\d{3}-\d{4}" placeholder="xxx-xxx-xxxx"> <br>
 < input type="text" name="inp" value="some value" > <input type="text" name="inp" value="some value"> <br>
 < input type="text" name="login" value="login" required> <input type="text" name="login" value="login" required> <br>
 < input type="time" > <input type="time"> <br>
 < input type="url" > <input type="url"> <br>
 < input type="week" > <input type="week"> <br>
-< textarea cols="30" rows="10" placeholder="оставьте комментарий">< /textarea> <textarea cols="30" rows="10" placeholder="оставьте комментарий"></textarea>
+< textarea cols="30" rows="10" placeholder="оставьте комментарий">< /textarea> <textarea cols="30" rows="10" placeholder="оставьте комментарий"></textarea><br>
       <pre>               
  Атрибуты:
 accept    - устанавливает тип файлов, которые допустимы для выбора.
