--- a/programming/rust.html
+++ b/programming/rust.html
@@ -3,7 +3,8 @@
 <div class="flex">
   <div id="links">
     <a href="https://www.rust-lang.org/"><img src="https://www.rust-lang.org/static/images/favicon-32x32.png" alt="Rust"> rust-lang.org</a><br>
-    <a href="https://www.youtube.com/playlist?list=PLQQFvHDqx-V8Qjj-oyga0tYSCKzq5DJQE">Уроки</a> 10<br>
+    <a href="https://www.youtube.com/playlist?list=PLQQFvHDqx-V8Qjj-oyga0tYSCKzq5DJQE">Retro Light. Уроки (2019)</a> 10<br>
+    <a href="https://www.youtube.com/playlist?list=PLlb7e2G7aSpTfhiECYNI2EZ1uAluUqE_e">Computer Science Center. Уроки (2019)</a><br>
     <a href="https://youtu.be/16k_P3mxu1Q">Криптография на Расте</a><br>
     <a href="https://www.yandex.ru/search/?text=rust%20%D0%BA%D0%BE%D0%BC%D0%BF%D0%B8%D0%BB%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D1%82%D1%8C%20%D0%B2%20javascript&clid=2186620&rdrnd=888287&lr=213&redircnt=1573573855.1">Rust-wasm</a><br>
   </div>
