--- a/zdorovie/index.html
+++ b/zdorovie/index.html
@@ -6,7 +6,7 @@
 	<title>Здоровье и Спорт</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
-  <script src="../JS/main.js"></script>
+  <script src="../JS/main.js" type="module"></script>
 
 </head>
 
@@ -20,7 +20,7 @@
   </div>
 </header>
 
-<content class="flex">
+<main>
 
 <div id="links">
   <a href="http://www.fit4life.ru/"><img src="http://www.fit4life.ru/favicon.ico"> Fit4Life.ru</a>
@@ -164,7 +164,7 @@
 
 
 </article>
-</content>
+</main>
 
 <footer></footer>
 </body>
