--- a/zdorovie/produkty.html
+++ b/zdorovie/produkty.html
@@ -6,7 +6,7 @@
 	<title>Питание</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
-  <script src="../JS/main.js" defer></script>
+  <script src="../JS/main.js" type="module"></script>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
   </div>
 </header>
 
-<content class="flex">
+<main class="flex">
 
 <div id="links">
     <li><a href="http://wkus-no.ru/"><img src="https://wkus-no.ru/static/images/logo.png"> Вкус-Но</a></li>
@@ -256,7 +256,7 @@ BSN NO-Xplode 3.0 1,13 кг
 <tr><td> * </td><td> *</td><td> *</td><td> *</td><td> *</td><td> *</td><td> *</td></tr>
   </table>
 
-</content>
+</main>
 
 <footer></footer>
 </body>
