--- a/programming/golang.html
+++ b/programming/golang.html
@@ -5,7 +5,7 @@
 	<div id="links">
 		<a href="https://golang.org/">Golang.org</a><br>
 		<a href="https://youtu.be/53ULpInm988">Почему GO?</a><br>
-		<a href="https://youtu.be/2fxNbhy2gt0">Плюсы и минусы Go</a><br>
+		<a href="https://youtu.be/2fxNbhy2gt0">Плюсы и минусы Go</a>, <a href="https://ater.me/conf/techtrain2018.pdf">презентация</a><br>
 		<a href="https://itproger.com/course/one-lesson/14"> go за полчаса</a><br>
 		<a href="https://itvdn.com/ru/video/golang">Видео уроки Golang (ITVDN)</a><br>
 		<a href="https://play.golang.org/">play.golang.org</a><br>
