--- a/programming/shablon.html
+++ b/programming/shablon.html
@@ -3,13 +3,14 @@
 <head>
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="">
 	<title>Title</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
-  <script src="../JS/main.js"></script>
+  <script src="../JS/main.js" type="module"></script>
 
 <!--   <link rel="stylesheet" href="../CSS/lb_style.css">
-  <script src="../JS/lb.js" defer></script> -->
+   <script src="../JS/lazysizes.min.js" async=""></script> -->
 </head>
 
 <body>
